feat: Implement Store Context and API integration for SnapBuy
- Added StoreContext for managing store state and loading status.
- Implemented snapBuyAPI for handling API requests related to store, collections, products, orders, and user accounts.
- Created Account page for user profile management, including password change functionality.
- Developed Auth page for user login and account creation.
- Built Cart page for managing shopping cart items, delivery options, and order summary.
- Defined TypeScript interfaces for SnapBuy entities including Store, Product, Order, and more.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CONNECT HUB | Premium USB Hubs, Wireless Adapters & Connectivity Accessories</title>
-    <meta name="description" content="Shop premium USB-C hubs, wireless display adapters, and car tech accessories at CONNECT HUB. Free shipping on orders over $50. 2-year warranty on all products." />
+    <title>
+      CONNECT HUB | Premium USB Hubs, Wireless Adapters & Connectivity
+      Accessories
+    </title>
+    <meta
+      name="description"
+      content="Shop premium USB-C hubs, wireless display adapters, and car tech accessories at CONNECT HUB."
+    />
     <meta name="author" content="CONNECT HUB" />
-    <meta name="keywords" content="USB hub, USB-C dock, wireless adapter, car bluetooth, connectivity accessories, HDMI adapter, travel dock" />
+    <meta
+      name="keywords"
+      content="USB hub, USB-C dock, wireless adapter, car bluetooth, connectivity accessories, HDMI adapter, travel dock"
+    />
     <link rel="canonical" href="https://connecthub.com" />
 
-    <meta property="og:title" content="CONNECT HUB | Premium Connectivity Accessories" />
-    <meta property="og:description" content="Shop premium USB-C hubs, wireless display adapters, and car tech accessories. Free shipping over $50." />
+    <meta
+      property="og:title"
+      content="CONNECT HUB | Premium Connectivity Accessories"
+    />
+    <meta
+      property="og:description"
+      content="Shop premium USB-C hubs, wireless display adapters, and car tech accessories."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ConnectHub" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
   </head>
 
   <body>
